fix:常量整理